# 3.URDF_Simulation_Workshop

./: README.md  robot.xacro
1. Gazebo/: Gazebo.md
2. URDF/1. An Introduction to URDF, Links, and Xacro/: An Introduction to URDF, Links, and Xacro.md
2_dynamic_frames_odom_map/: README.md
3_static_and_dynamic_broadcasters/: README.md
A. Gazebo/: Gazebo.md
A. Gazebo/gazebo_pkg/: robot.urdf
B. Static and Dynamic  transformations/: Dynamic.md  Static.md
B. Static transformation/: Dynamic.md  Static.md
B. URDF/: README.md
B. URDF/D. sw2urdf/arabian_robot_pkg/arabian_robot/: CMakeLists.txt  package.xml
B. URDF/D. sw2urdf/arabian_robot_pkg/arabian_robot/config/: joint_names_arabian_robot.yaml
B. URDF/D. sw2urdf/arabian_robot_pkg/arabian_robot/launch/: display.launch
B. URDF/D. sw2urdf/arabian_robot_pkg/arabian_robot/meshes/: base_link.STL  gps_Link.STL  ultrasonic_link.STL
B. URDF/D. sw2urdf/arabian_robot_pkg/arabian_robot/urdf/: _usb_plug.urdf.xacro  arabian_robot.csv  plugins.gazebo
C. TF/: README.md
D. Static and Dynamic  transformations/: Static.md
D. robot and joint state publisher/: robot_joint_state_publisher.md
Gazebo/: gazebo.md
Topic_2/: Intro+links.md
Topic_3/: Topic_3.md
Transformation_Basics_and_Stactic_Transforms/: Static.md  Transformations_and_Frames.md
Transformations_and_Frames_TF/: Transformations_and_Frames.md
URDF/: README.md  intro+links.md
static_dynamic_pkg/: CMakeLists.txt  README.md
sw2urdf/: export_solid_as_urdf.md
urdf/: urdf.md
urdf-and-simulation/: intro+links.md  plugins.md  urdf-and-simulation.md
(+106 files in other folders)
